--- a/public/elangAkiTuren.html
+++ b/public/elangAkiTuren.html
@@ -29,7 +29,7 @@
       color: black;
     }
 
-    /* Logo tetap terlihat */
+    /* Pastikan logo tidak terpengaruh */
     #navbar img {
       filter: none;
     }
@@ -42,8 +42,8 @@
     <nav aria-label="Global" class="flex items-center justify-between p-4 sm:p-6 lg:px-8 max-w-7xl mx-auto">
       <div class="flex xl:flex-1">
         <a href="#hero" class="-m-1.5 p-1.5 logo-text">
-          <span class="sr-only">Elang Aki Kepanjen</span>
-          <img src="src/asset/elangkepanjen.png" alt="Elang Aki Kepanjen Logo" class="h-16 sm:h-20 w-auto" />
+          <span class="sr-only">Elang Aki Turen</span>
+          <img src="src/asset/elangturen.png" alt="Elang Aki Turen Logo" class="h-16 sm:h-20 w-auto" />
         </a>
       </div>
       <div class="flex xl:hidden bg-primary p-3 rounded-2xl">
@@ -62,7 +62,7 @@
         <a href="#alamat" class="nav-link text-lg font-semibold">Alamat</a>
       </div>
       <div class="hidden xl:flex xl:flex-1 xl:justify-end">
-        <a target="_blank" href="https://wa.me/+6281318725725" class="cta-button text-lg font-semibold bg-primary text-black px-5 py-2.5 rounded-full">
+        <a target="_blank" href="https://wa.me/+6281318625625" class="cta-button text-lg font-semibold bg-primary text-black px-5 py-2.5 rounded-full">
           Pesan Sekarang
         </a>
       </div>
@@ -74,8 +74,8 @@
         <div class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto bg-white p-4 sm:p-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10">
           <div class="flex items-center justify-between">
             <a href="#hero" class="-m-1.5 p-1.5">
-              <span class="sr-only">Elang Aki Kepanjen</span>
-              <img src="src/asset/elangkepanjen.png" alt="Elang Aki Kepanjen Logo" class="h-8 w-auto" />
+              <span class="sr-only">Elang Aki Turen</span>
+              <img src="src/asset/elangturen.png" alt="Elang Aki Turen Logo" class="h-8 w-auto" />
             </a>
             <button type="button" id="close-menu" class="-m-2.5 rounded-md p-2.5 text-gray-700">
               <span class="sr-only">Close menu</span>
@@ -94,7 +94,7 @@
                 <a href="#alamat" class="mobile-link -mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50">Alamat</a>
               </div>
               <div class="py-6">
-                <a target="_blank" href="https://wa.me/+6281318725725" class="mobile-link -mx-3 block rounded-lg px-3 py-2.5 text-base/7 font-semibold text-gray-900 hover:bg-gray-50">Pesan Sekarang</a>
+                <a target="_blank" href="https://wa.me/+6281318625625" class="mobile-link -mx-3 block rounded-lg px-3 py-2.5 text-base/7 font-semibold text-gray-900 hover:bg-gray-50">Pesan Sekarang</a>
               </div>
             </div>
           </div>
@@ -111,13 +111,13 @@
       <div class="max-w-7xl px-4 sm:px-6 py-12 sm:py-20 lg:flex lg:items-center lg:gap-x-10 lg:px-8">
         <div class="mx-auto max-w-2xl lg:mx-0 lg:flex-auto">
           <h1 class="mt-10 text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-bold tracking-tight text-pretty text-primary">
-            Elang Aki Kepanjen
+            Elang Aki Turen
           </h1>
           <p class="mt-6 sm:mt-8 text-base sm:text-lg md:text-xl lg:text-2xl font-medium text-pretty text-white">
             Outlet AKI Bergaransi.<br class="hidden sm:block">Melayani Antar AKI,<br class="hidden md:block">Pasang AKI Ke Tempat Anda
           </p>
           <div class="mt-8 sm:mt-10 flex items-center gap-x-4 sm:gap-x-6">
-            <a target="_blank" href="https://wa.me/+6281318725725" class="cta-button text-base sm:text-lg font-semibold bg-primary text-black px-4 sm:px-5 py-2 sm:py-2.5 rounded-full">
+            <a target="_blank" href="https://wa.me/+6281318625625" class="cta-button text-base sm:text-lg font-semibold bg-primary text-black px-4 sm:px-5 py-2 sm:py-2.5 rounded-full">
               Pesan Sekarang
             </a>
           </div>
@@ -125,7 +125,7 @@
         <div class="mt-12 sm:mt-16 md:mt-20 lg:mt-0 lg:shrink-0 lg:grow flex lg:justify-end justify-center">
           <div class="bg-primary w-full max-w-[415px] pb-3 pt-5 rounded-xl rounded-br-none">
             <img class="w-full h-auto -mt-10 -ml-5 rounded-tl-[50px] rounded-br-[50px] rounded-tr-xl rounded-bl-xl"
-              src="src/asset/herokepanjen.png" alt="Hero">
+              src="src/asset/heroturen.png" alt="Hero">
           </div>
         </div>
       </div>
@@ -144,7 +144,7 @@
             Tentang <span class="bg-primary px-1">Elang AKI</span>
           </h1>
           <p class="text-lg sm:text-xl text-justify leading-relaxed">
-            Elang Aki Kepanjen Fokus Melayani Kebutuhan AKI Retail, Perorangan, Perusahaan Punya Armada dan Bengkel. Kami
+            Elang Aki Turen Fokus Melayani Kebutuhan AKI Retail, Perorangan, Perusahaan Punya Armada dan Bengkel. Kami
             Menyediakan Segala Jenis dan Tipe, AKI Mobil, AKI Motor, VRLA, AKI Basah, AKI MF, dan Segala Peralatan AKI.
           </p>
         </div>
@@ -170,7 +170,7 @@
         </div>
       </div>
       <div class="bg-white rounded-3xl shadow-lg overflow-hidden border-border border">
-        <img src="src/asset/pasang.png" alt="Layanan Antar Pasang" class="w-full h-96 lg:h-[500px] object-cover">
+        <img src="src/asset/pasangturen.png" alt="Layanan Antar Pasang" class="w-full h-96 lg:h-[500px] object-cover">
         <div class="p-4 sm:p-6">
           <h3 class="text-xl sm:text-2xl font-semibold text-black mb-3 sm:mb-4">Layanan Antar Pasang</h3>
           <p class="text-sm sm:text-base text-justify text-gray-700 leading-relaxed">
@@ -179,7 +179,7 @@
         </div>
       </div>
       <div class="bg-white rounded-3xl shadow-lg overflow-hidden border-border border">
-        <img src="src/asset/pengecekanaki.png" alt="Layanan Pengecekan Plus" class="w-full h-96 lg:h-[500px] object-cover">
+        <img src="src/asset/pengecekanturen.png" alt="Layanan Pengecekan Plus" class="w-full h-96 lg:h-[500px] object-cover">
         <div class="p-4 sm:p-6">
           <h3 class="text-xl sm:text-2xl font-semibold text-black mb-3 sm:mb-4">Layanan Pengecekan Plus</h3>
           <p class="text-sm sm:text-base text-justify text-gray-700 leading-relaxed">
@@ -188,7 +188,7 @@
         </div>
       </div>
       <div class="bg-white rounded-3xl shadow-lg overflow-hidden border-border border">
-        <img src="src/asset/garansi.png" alt="Bergaransi" class="w-full h-96 lg:h-[500px] object-cover">
+        <img src="src/asset/garansituren.png" alt="Bergaransi" class="w-full h-96 lg:h-[500px] object-cover">
         <div class="p-4 sm:p-6">
           <h3 class="text-xl sm:text-2xl font-semibold text-black mb-3 sm:mb-4">Bergaransi</h3>
           <p class="text-sm sm:text-base text-justify text-gray-700 leading-relaxed">
@@ -201,7 +201,7 @@
 
   <!-- CTA -->
   <section class="bg-black w-full flex justify-center items-center my-12 sm:my-16 lg:my-20 py-5 sm:py-8">
-    <img class="h-32 sm:h-40 w-auto" src="src/asset/elangakikepanjen.png" alt="Elang Aki Kepanjen Logo">
+    <img class="h-32 sm:h-40 w-auto" src="src/asset/elangturen.png" alt="Elang Aki Turen Logo">
   </section>
 
   <!-- Testimonial -->
@@ -213,14 +213,14 @@
     </div>
     <div class="bg-black rounded-[40px] p-4 sm:p-6 md:p-8 lg:p-12 flex flex-col md:flex-row gap-6 sm:gap-8 md:rounded-br-[150px]">
       <div class="w-full md:w-1/3 flex-shrink-0">
-        <img src="src/asset/dany.png" alt="Pak Dany - Kepanjen" class="w-full h-auto rounded-2xl">
+        <img src="src/asset/yoga.png" alt="Pak Yoga - Turen" class="w-full h-auto rounded-2xl">
       </div>
       <div class="w-full md:w-2/3 text-white flex flex-col justify-between py-3">
         <p class="text-base sm:text-lg md:text-xl font-semibold leading-relaxed">
-          "Bagi saya, toko aki ini adalah solusi lengkap. Mereka menyediakan pengecekan gratis untuk memastikan aki masih layak pakai atau tidak. Jika perlu ganti, ada layanan antar pasang ke rumah atau lokasi kendaraan, jadi tidak perlu khawatir mogok di jalan. Semua dikerjakan dengan cepat, rapi, dan menggunakan aki yang kualitasnya terjamin. Dengan layanan seperti ini, saya merasa lebih aman dan nyaman saat berkendara”.
+          "Awalnya saya cuma mau cek kondisi aki karena mobil terasa agak berat saat distarter. Di toko ini, pengecekan dilakukan gratis dan hasilnya dijelaskan secara detail. Ternyata aki memang sudah lemah dan perlu diganti. Yang bikin puas, mereka menawarkan layanan antar pasang, jadi saya nggak perlu repot bawa mobil ke bengkel. Prosesnya cepat, teknisinya rapi dan sopan. Sekarang mobil kembali normal, dan saya tenang karena tahu aki dalam kondisi prima."
         </p>
         <h3 class="text-primary text-xl sm:text-2xl md:text-3xl font-bold mt-4 sm:mt-6 md:mt-8">
-          Pak Dany - Kepanjen
+          Pak Yoga - Turen
         </h3>
       </div>
     </div>
@@ -236,29 +236,30 @@
     <div class="w-full max-w-7xl mx-auto">
       <div class="w-full h-[300px] sm:h-[400px] md:h-[450px] lg:h-[600px] rounded-lg overflow-hidden">
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3754.281832884076!2d112.56703837476971!3d-8.130957691898821!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e789f53c2f612db%3A0x651cbd13e705834a!2sTOKO%20ELANG%20AKI%20KEPANJEN.%20OUTLET%20AKI%20BERGARANSI!5e1!3m2!1sid!2sid!4v1764741993923!5m2!1sid!2sid"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3754.0224098444264!2d112.69116107477018!3d-8.158622191872!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd6216a80f6e389%3A0xab9d4157c778c8b1!2sTOKO%20ELANG%20AKI%20MALANG%20-%20TUREN.%20OUTLET%20AKI%20BERGARANSI!5e1!3m2!1sid!2sid!4v1764747129199!5m2!1sid!2sid"
           width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8 sm:gap-12 lg:gap-12 items-start mt-12 sm:mt-16 lg:mt-20">
         <div class="text-white order-2 md:order-1 text-center md:text-left">
-          <h3 class="text-2xl sm:text-3xl font-bold mb-4 sm:mb-6">Toko Elang AKI Kepanjen</h3>
+          <h3 class="text-2xl sm:text-3xl font-bold mb-4 sm:mb-6">Toko Elang AKI Turen</h3>
           <p class="text-base sm:text-lg leading-relaxed mb-6 sm:mb-8">
-            Jl. Ahmad Yani No.71 Kepanjen, Kec. Kepanjen,<br>
-            Kabupaten Malang, Jawa Timur 65163
+            Dekat masjid baitul muttaqim,<br>
+            Jl. Raya Kedok No.40, Dusun Kedok Kidul, <br>
+            Kedok, Kec. Turen, Kab. Malang, Jawa Timur 65176
           </p>
           <div class="space-y-2 sm:space-y-3">
             <div class="flex items-center mb-2 space-x-2">
               <svg class="size-5" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">             
                 <path fill="#FFFFFF" d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
               </svg>
-              <a target="_blank" href="https://wa.me/+6281318725725" class="text-lg">081 318 725 725</a>
+              <a target="_blank" href="https://wa.me/+6281318625625" class="text-lg">081 318 625 625</a>
             </div>
-            <p class="text-lg">elangakikepanjen@gmail.com</p>
+            <p class="text-lg">elangakituren@gmail.com</p>
           </div>
         </div>
         <div class="flex justify-center md:justify-end order-1 md:order-2">
-          <img src="src/asset/elangakikepanjen.png" alt="Elang Aki Kepanjen Logo" class="w-full max-w-xs sm:max-w-sm h-auto">
+          <img src="src/asset/elangturen.png" alt="Elang Aki Turen Logo" class="w-full max-w-xs sm:max-w-sm h-auto">
         </div>
       </div>
     </div>
@@ -268,7 +269,7 @@
   <footer class="bg-black border-t border-white/20">
     <div class="mx-auto max-w-7xl overflow-hidden px-4 sm:px-6">
       <div class="mt-8 sm:mt-10 flex justify-center gap-x-6 sm:gap-x-10">
-        <a href="https://www.tiktok.com/@elangakikepanjen?_r=1&_t=ZS-929aELWyFz5" class="text-white hover:text-primary transition-colors">
+        <a href="https://www.tiktok.com/@elang.aki.turen?_r=1&_t=ZS-929aLRAnVVH" class="text-white hover:text-primary transition-colors">
             <svg class="size-5 sm:size-7" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <title>Tiktok</title>
                 <g id="Icon/Social/tiktok-white" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -277,7 +278,7 @@
             </svg>
         </a>
 
-        <a href="#" class="text-white hover:text-primary transition-colors">
+        <a href="https://www.instagram.com/elangakimalang_turen/?igsh=bjJvMXN6dXhhejdn#" class="text-white hover:text-primary transition-colors">
           <span class="sr-only">Instagram</span>
           <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" class="size-5 sm:size-6">
             <path d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 00-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z" />
@@ -297,7 +298,7 @@
       const closeBtn = document.getElementById('close-menu');
       const modal = document.getElementById('mobile-menu');
 
-      // Handle navbar color on scroll
+      // Handle navbar background on scroll
       function handleScroll() {
         if (!heroSection) return;
         const heroBottom = heroSection.offsetTop + heroSection.offsetHeight;
@@ -309,7 +310,7 @@
       }
 
       window.addEventListener('scroll', handleScroll);
-      handleScroll(); // Initial check
+      handleScroll(); // Initial state
 
       // Mobile menu toggle
       if (burgerBtn) {
@@ -328,7 +329,7 @@
           const targetElement = document.querySelector(targetId);
           if (targetElement) {
             if (modal.open) modal.close();
-            const offsetTop = targetElement.offsetTop - 100; // adjust offset as needed
+            const offsetTop = targetElement.offsetTop - 100; // adjust if needed
             window.scrollTo({
               top: offsetTop,
               behavior: 'smooth'
@@ -344,4 +345,4 @@
     });
   </script>
 </body>
-</html>
+</html
