--- a/public/akiMurah.html
+++ b/public/akiMurah.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="src/style.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="font-primary">
@@ -272,6 +273,27 @@
             <p class="mt-4 sm:mt-5 mb-6 sm:mb-10 text-center text-xs sm:text-sm/6 text-white">&copy; 2025 GrosirAkiMurah. All rights reserved.</p>
         </div>
     </footer>
+
+<script>
+    tailwind.config = {
+        theme: {
+            extend: {
+                colors: {
+                    primary: "#FEFC41",
+                    border: "#5f5f5f",
+                    text: "#231A15",
+                    dragon: "#D3A648",
+                    anugerah: "#0B34DA",
+                    akimurah: "#C98B0B",
+                    elang: "#FFFF2E",
+                },
+                fontFamily: {
+                    primary: ["Poppins", "sans-serif"]
+                }
+            }
+        }
+    }
+</script>
 
     <script>
     document.addEventListener('DOMContentLoaded', function() {
