--- a/public/dragonAki.html
+++ b/public/dragonAki.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="src/style.css" rel="stylesheet">
+      <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="font-primary">
 
@@ -251,7 +252,26 @@
       </p>
     </div>
   </footer>
-
+<script>
+    tailwind.config = {
+        theme: {
+            extend: {
+                colors: {
+                    primary: "#FEFC41",
+                    border: "#5f5f5f",
+                    text: "#231A15",
+                    dragon: "#D3A648",
+                    anugerah: "#0B34DA",
+                    akimurah: "#C98B0B",
+                    elang: "#FFFF2E",
+                },
+                fontFamily: {
+                    primary: ["Poppins", "sans-serif"]
+                }
+            }
+        }
+    }
+</script>
   <!-- JavaScript: Smooth Scroll + Mobile Menu -->
   <script>
     document.addEventListener('DOMContentLoaded', function() {
