--- a/public/elangDistribution.html
+++ b/public/elangDistribution.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="src/style.css" rel="stylesheet">
+        <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="font-primary">
@@ -270,7 +271,26 @@
             </div>
         </div>
     </footer>
-
+<script>
+    tailwind.config = {
+        theme: {
+            extend: {
+                colors: {
+                    primary: "#FEFC41",
+                    border: "#5f5f5f",
+                    text: "#231A15",
+                    dragon: "#D3A648",
+                    anugerah: "#0B34DA",
+                    akimurah: "#C98B0B",
+                    elang: "#FFFF2E",
+                },
+                fontFamily: {
+                    primary: ["Poppins", "sans-serif"]
+                }
+            }
+        }
+    }
+</script>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         const burgerBtn = document.getElementById('burger-menu-toggle');
